Fix alignment issue properly.
Set vertical-align: top and margin to 0.

--- a/src/styles/brackets.less
+++ b/src/styles/brackets.less
@@ -182,8 +182,9 @@ a, img {
         font: inherit;
         height: inherit;
         line-height: inherit;
-        margin: -3px 0 0 0;
+        margin: 0;
         padding: 0 20px 0 10px;
+        vertical-align: top;
         width: auto;
         &:focus {
             outline: 0;
